Update remote