@@ -1,12 +1,38 @@
 #!/usr/bin/env bash
-set -B
+set -euBo pipefail
 ### Settings
-TIMEOUT=60
-UPDATE_PURPUR=true
-BACKUP=true
-UNIVERSE=$MC_DIR/universe
-BACKUP=$MC_DIR/backup
+TIMEOUT='60'
 MC_DIR=~/Minecraft
+UPDATE_PURPUR='false'
+BACKUP='false'
+UNIVERSE="$MC_DIR/universe"
+MC_DIR='~/Minecraft'
+PROXY='false'
+DATE='oops'
+HOST='0.0.0.0'
+VELOCITY='nope'
+case "$PROXY" in
+true)
+	ONLINE=false
+	;;
+false)
+	ONLINE=true
+	;;
+esac
+declare -A CUSTOMJAVAOPTIONS=(
+	[lobby]='-Xms1536M -Xmx3G -Xdock:name=Lobby -DGeyserSkinManager.ForceShowSkins=true -Xdock:icon=./server-icon.png'
+	[survival]='-Xmx3G -Xms2G -Xdock:name="Survival_Server" -DGeyserSkinManager.ForceShowSkins=true -Xdock:icon=./server-icon.png'
+	[ctl]='-Xms2G -Xmx3G -Xdock:name=CTL -DGeyserSkinManager.ForceShowSkins=true -Xdock:icon=./server-icon.png'
+	#[jack]='-Xms2G -Xmx3G -Xdock:name="Jacks_Server" -DGeyserSkinManager.ForceShowSkins=true -Xdock:icon=./server-icon.png'
+	[fabric]='-Xmx5G -Xms4G -Xdock:name=Fabric_Server -Xdock:icon=./server-icon.png'
+	)
+declare -A OPTS=(
+	[lobby]="--server-name Lobby -h 127.0.0.1 -o false --log-pattern lobby.log -W ../universe/lobby -c ../properties/lobby.properties --log-pattern ../logs/lobby/$DATE.log "
+	[survival]="--server-name Survival -h $HOST -o $ --log-pattern survival.log -W ../universe/survival -c ../properties/survival.properties --log-pattern ../logs/survival/$DATE.log"
+	[ctl]=" --server-name CTL -h $HOST -o $ONLINE --log-pattern ctl.log -W ../universe/ctl -c ../properties/ctl.properties --log-pattern ../logs/ctl/$DATE.log "
+	#[jack]="--server-name Jack's Server -h $HOST -o $ONLINE --log-pattern jack.log -W ../universe/jack -c ../properties/jack.properties --log-pattern ../logs/jack/$DATE.log "
+	[fabric]='--universe ../universe/fabric'
+	)
 ### Do not modify past here
 export TIMEOUT
 RED=$(tput setaf 1)
@@ -18,8 +44,9 @@ RESET=$(tput sgr0)
 YELLOW=$(tput setaf 3)
 GREEN=$(tput setaf 2)
 SERVERS=()
+TIME="$(date +%Y-%d-%m_%H-%M)"
 AIKAR='-XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1 -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:InitiatingHeapOccupancyPercent=15 -Dusing.aikars.flags=https://mcflags.emc.gs -Daikars.new.flags=true'
-ZGC=
+ZGC="-XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:-UseParallelGC -XX:-UseParallelOldGC -XX:-UseG1GC -XX:+UseZGC -Xlog:gc*:logs/ZGC/$TIME.log:time,uptime:filecount=2,filesize=8M"
 out(){
 	for X in "$@"; do
 		echo -en "${BLUE}${BOLD}==>${RESET} ${WHITE}${X} "
@@ -67,33 +94,63 @@ do
 			;;
 		velocity)
 			VELOCITY=true
+			;;
 		*)
 			warn "$1 is not a valid server and will be ignored."
 			;;
 	esac
 	shift
 done
+echo -e "Starting the following servers: \n${SERVERS[*]}\n"
 if [[ -z $VELOCITY ]]
 then
 	VELOCITY=false
 fi
-pushd $MC_DIR
-pushd ./bin
-if [[ $BACKUP == 'true' ]]
+## Backup
+cd ~/Minecraft
+if [[ $BACKUP = true ]]
 then
-	MC_DIR=~/Minecraft
-
-	cd $UNIVERSE
-	ARGS=-dbrST
-	for SERVER in $@
+	pushd ./backup
+	for SERVER in ${SERVERS[*]}
 	do
-	  cd $SERVER
-	  if [[ -f "$OLD_ZIP" ]]
-	  then
-	    ARGS+=
-	  fi
-	  zip $ARGS $(date "+%Y-%d-%m %H:%M")
+		pushd $SERVER
+		#OLDZIPS=$(find . -type f | head -n 10 )
+		#diff -q $OLDZIPS $(find . -type f )
+		tar -czf ./$SERVER/"$TIME".tar.gz ../universe/$SERVER
+		popd
 	done
-popd
-tmux new -ds SERVERS
-tmux renamew -t
+	popd
+fi
+## Starting of server
+line(){
+	echo $1
+}
+set -x
+if ! tmux has -t 'SERVERS' 2>/dev/null
+then
+	line 128
+  tmux new -ds SERVERS -n "${SERVERS[0]}" -c "$MC_DIR"
+fi
+line 134
+for WINDOW in ${SERVERS[*]}
+do
+  if tmux findw -t "$WINDOW" 2>/dev/null
+  then
+		tmux send -t "$WINDOW" 'stop
+		'
+		line 138
+		until ! tmux findw -t "$WINDOW" 2>/dev/null
+		do
+			sleep 3
+		done
+  fi
+	tmux neww -t SERVERS -c "$MC_DIR" -n "$WINDOW"
+	line 145
+  tmux send -t "$WINDOW" "java -version && echo $WINDOW && read STOP && exit
+	"
+	#if tmux findw -t 'bash'
+	#then
+	#	tmux killw -t 'bash'
+	#fi
+done
+echo 'All done!'
